Выполнено задание спринта 6: - в HistoryManager добавлен метод удаления задачи; - в InMemoryHistoryManager добавлена рализация метода удаления задачи из истории; - в InMemoryHistoryManager добавлен "свой" связанный список для хранения порядка истории; - доработаны тесты для проверки новых функций; - в конструктор Task возвращён статус задачи (так как это всё-таки по ТЗ).